# ztarknet-indexer

./: README.md
backend/: .env  Cargo.toml
backend/src/: main.rs
backend/src/alerts/: mod.rs
backend/src/api/: mod.rs
backend/src/blockchain/: mod.rs
backend/src/database/: mod.rs
backend/src/models/: mod.rs
backend/tests/: integration_test.rs
frontend/: .env  package-lock.json  package.json
frontend/backend/: .env
frontend/backend/migrations/: 001_initial_schema.sql
frontend/src/: App.tsx
frontend/src/services/: api.ts  websocket.ts
frontend/src/types/: index.ts
