# [package]
# name = "backend"
# version = "0.1.0"
# edition = "2024"

# [dependencies]

[package]
name = "pharos-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = "0.8.7"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }

# Blockchain interaction
ethers = "2.0"
alloy-primitives = "1.4.1"

# Database
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls", 
    "postgres", 
    "uuid", 
    "chrono", 
    "json",
    "migrate"
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
thiserror = "2.0.17"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["serde", "v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Email
# lettre = { version = "0.11", features = ["tokio1-rustls-tls"] }

# Telegram
teloxide = { version = "0.17", features = ["macros"] }

# CSV export
csv = "1.3"

# Environment variables
dotenvy = "0.15"

[dev-dependencies]
tokio-test = "0.4"
